--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "burnJsPopup",
+  "description": "A simple JavaScript helper to create popups in HTML",
+  "version": "1.0.0",
+  "author": "Martin Brenn<brenn@depon.net> (http://www.depon.net)",
   "devDependencies": {
     "@types/node": "^22.5.5",
     "typescript": "^5.6.2"
@@ -6,5 +10,9 @@
   
   "scripts": {
     "build": "tsc"
-  }
+  },
+
+  "files": [
+    "dist/**/*"
+  ]
 }
